LPS-119869 Fixes spacing with inline DataSet

--- a/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/META-INF/resources/data_set_display/_data_set_display.scss
+++ b/modules/apps/frontend-taglib/frontend-taglib-clay/src/main/resources/META-INF/resources/data_set_display/_data_set_display.scss
@@ -120,6 +120,10 @@
 	}
 
 	&.data-set-display-inline {
+		.data-set-display-pagination-wrapper {
+			padding-top: 0.5rem;
+		}
+
 		.table {
 			border-bottom: 1px solid $border-color;
 		}
